Add shuffle and repeat functionality to API and UI
